<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="503dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000ff"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="#ffff00"
            android:textSize="33sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="25sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text1"
                    android:textSize="30sp" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rd1"
                        android:textSize="25sp" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rd2"
                        android:textSize="25sp" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rd3"
                        android:textSize="25sp" />
                </RadioGroup>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn1"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text2"
                    android:textSize="30sp" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rd4"
                        android:textSize="25sp" />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rd5"
                        android:textSize="25sp" />

                    <RadioButton
                        android:id="@+id/radioButton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rd6"
                        android:textSize="25sp" />
                </RadioGroup>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn2"
                    android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0sp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkRed"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20.0sp"
                android:layout_weight="0.33"
                android:background="#ffff0000"
                android:text="@string/red"
                android:textSize="25.0sp" />

            <CheckBox
                android:id="@+id/checkYellow"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20.0sp"
                android:layout_weight="0.33"
                android:background="#ffffff00"
                android:text="@string/yellow"
                android:textSize="25.0sp" />

            <CheckBox
                android:id="@+id/checkGreen"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:background="#ff00ff00"
                android:text="@string/green"
                android:textSize="25.0sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/colours"
            android:textSize="25.0sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>